cmake_minimum_required(VERSION 3.11)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

enable_testing()

add_subdirectory(Base64)
add_subdirectory(Base64/tests)
add_subdirectory(BinarySearch)
add_subdirectory(BinarySearch/tests)
add_subdirectory(DataStructures)
add_subdirectory(DataStructures/tests)
add_subdirectory(Graphs)
add_subdirectory(Graphs/tests)
add_subdirectory(Math)
add_subdirectory(Math/tests)
add_subdirectory(Sorts)
add_subdirectory(Sorts/benchmarks)
add_subdirectory(Sorts/tests)
add_subdirectory(String)
add_subdirectory(String/tests)
add_subdirectory(StringUtils)
add_subdirectory(StringUtils/tests)
add_subdirectory(Xrange)
add_subdirectory(Xrange/tests)
